ändrade wrapped button

--- a/project/templates/movies.html
+++ b/project/templates/movies.html
@@ -17,8 +17,7 @@
     <form method="get" action="{{ url_for('movies') }}" class="search-form">
         <input type="text" name="q" placeholder="Search for a movie..." value="{{ query }}">
         <button type="submit">Search</button>
-{#        wrapped button#}
-        <a href="{{ url_for('wrapped') }}" class="btn btn-primary">Show Wrapped</a>
+        <a href="{{ url_for('wrapped') }}" class="btn-search">Show Wrapped</a>
     </form>
 
     {% if query and not movies %}
