--- a/project/static/style.css
+++ b/project/static/style.css
@@ -298,3 +298,20 @@ h1 {
     transform: scale(0.97);
 }
 
+.btn-search {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-search:hover {
+    background-color: #0056b3;
+}
+
