--- a/project/templates/movies.html
+++ b/project/templates/movies.html
@@ -11,7 +11,7 @@
 
     <div class="user-bar">
         <span class="user-label">Logged in as <strong>{{ username }}</strong></span>
-        <a href="{{ url_for('my_list') }}" class="mylist-btn">My list</a>
+        <a href="{{ url_for('my_list') }}" class="logout-btn">My list</a>
         <a href="{{ url_for('logout') }}" class="logout-btn">Logout</a>
     </div>
 
