--- a/project/templates/my_list.html
+++ b/project/templates/my_list.html
@@ -11,7 +11,7 @@
 
     <div class="user-bar">
         <span class="user-label">Logged in as <strong>{{ username }}</strong></span>
-        <a href="{{ url_for('movies') }}" class="back-btn">Back to search</a>
+        <a href="{{ url_for('movies') }}" class="logout-btn">Back to search</a>
         <a href="{{ url_for('logout') }}" class="logout-btn">Logout</a>
     </div>
 
