--- a/project/templates/register.html
+++ b/project/templates/register.html
@@ -6,7 +6,16 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-<div class="auth-page">
+
+<section class="auth-page wave-page">
+    <!-- Wave background - GOTTA BE UP HERE -->
+    <div class="wave">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <!-- Register card -->
     <div class="container">
         <div class="auth-card">
             <h1 class="auth-title">Create account</h1>
@@ -43,7 +52,8 @@
             </p>
         </div>
     </div>
-</div>
+</section>
+
 </body>
 </html>
 
