--- a/project/static/style.css
+++ b/project/static/style.css
@@ -125,9 +125,9 @@ h1 {
   height: 100%;
 
   /* Matching with current background? */
-  background: radial-gradient(1200px 800px at 20% 20%, rgba(56, 189, 248, 0.18), transparent 60%),
-              radial-gradient(900px 600px at 80% 30%, rgba(34, 197, 94, 0.12), transparent 55%),
-              #020617;
+  background: radial-gradient(1200px 800px at 20% 20%, rgb(208, 255, 0), transparent 60%),
+              radial-gradient(900px 600px at 80% 30%, rgba(166, 255, 0, 0.12), transparent 55%),
+              #00f7ff;
 
   box-shadow: inset 0 0 60px rgba(0, 0, 0, 0.55);
 }
@@ -177,11 +177,10 @@ h1 {
 }
 
 .auth-card {
-  background-color: rgba(2, 6, 23, 0.88);
-  border: 1px solid rgba(148, 163, 184, 0.12);
+  background-color: rgba(2, 6, 23, 0.11);
   border-radius: 12px;
   padding: 28px 24px;
-  box-shadow: 0 18px 50px rgba(0, 0, 0, 0.55);
+  box-shadow: 0 18px 50px rgba(0, 0, 0, 0.127);
   max-width: 420px;
   width: 100%;
   margin: 40px auto;
