--- a/project/templates/movies.html
+++ b/project/templates/movies.html
@@ -43,6 +43,12 @@
                         <p><strong>Release:</strong> {{ movie.release_date or "Unknown" }}</p>
                         <p><strong>Director:</strong> {{ movie.director or "Unknown" }}</p>
                         <p><strong>Rating:</strong> {{ movie.rating }}</p>
+                        {% if movie.runtime %}
+                            <p><strong>Runtime:</strong> {{ movie.runtime|format_runtime }}</p>
+                        {% endif %}
+                        {% if movie.genres %}
+                            <p><strong>Genres:</strong> {{ movie.genres|join(", ") }}</p>
+                        {% endif %}
                         <p class="overview">{{ movie.overview }}</p>
 
                         <form method="post"
@@ -54,6 +60,8 @@
                             <input type="hidden" name="release_date" value="{{ movie.release_date }}">
                             <input type="hidden" name="rating" value="{{ movie.rating }}">
                             <input type="hidden" name="director" value="{{ movie.director }}">
+                            <input type="hidden" name="runtime" value="{{ movie.runtime }}">
+                            <input type="hidden" name="genres" value="{{ movie.genres|join(', ') }}">
                             <button type="submit" class="add-to-list-btn">
                                 Add to my list
                             </button>
