--- a/project/templates/movies.html
+++ b/project/templates/movies.html
@@ -26,7 +26,7 @@
     </form>
 
     {% if query and not movies %}
-        <p>No movies found for "<strong>{{ query }}</strong>".</p>
+        <p>No results found for "<strong>{{ query }}</strong>".</p>
     {% endif %}
 
     {% if movies %}
